made timer only fire event for auto update option. refactored async functions. changed ui button functionality.